--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,14 +5,10 @@ edition = "2021"
 
 [dependencies]
 # Web framework
-axum = { version = "0.7", features = ["ws", "macros"] }
+axum = { version = "0.7", features = ["macros"] }
 tokio = { version = "1.35", features = ["full"] }
 tower = "0.4"
 tower-http = { version = "0.5", features = ["cors"] }
-
-# WebSocket
-tokio-tungstenite = "0.21"
-futures-util = "0.3"
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
