--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "libsodium-wrappers": "^0.7.15",
+    "libsodium-wrappers-sumo": "^0.7.15",
+    "lucide-react": "^0.561.0",
     "next": "16.0.8",
     "react": "19.2.1",
-    "react-dom": "19.2.1",
-    "libsodium-wrappers": "^0.7.15",
-    "libsodium-wrappers-sumo": "^0.7.15"
+    "react-dom": "19.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/libsodium-wrappers": "^0.7.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/libsodium-wrappers": "^0.7.14",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
